# Lightning-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/src/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Ray.h  Renderer.cpp  Renderer.h  Scene.h  main.cpp
